--- a/i18n/Xpectrum/es_CL/es_CL.csv
+++ b/i18n/Xpectrum/es_CL/es_CL.csv
@@ -2439,7 +2439,7 @@
 "Invalid method: %1","Método inválido: %1","module","Magento_Checkout",,
 "City","Cuidad","module","Magento_Checkout",,
 "Country","País","module","Magento_Checkout",,
-"State/Province","Estado/Provincia","module","Magento_Checkout",,
+"State/Province","Comuna","module","Magento_Checkout",,
 "Zip/Postal Code","Código Postal","module","Magento_Checkout",,
 "My Cart (1 item)","Mi carro (1 artículo)","module","Magento_Checkout",,
 "My Cart (%1 items)","Mi carro de compras (%1 artículos)","module","Magento_Checkout",,
@@ -3436,7 +3436,7 @@
 "Please enter the phone number.","Por favor, introduzca el número de teléfono.","module","Magento_Customer",,
 "Please enter the zip/postal code.","Por favor, introduzca el código postal.","module","Magento_Customer",,
 "Please enter the country.","Por favor, ingrese el país.","module","Magento_Customer",,
-"Please enter the state/province.","Por favor, introduzca el estado/provincia.","module","Magento_Customer",,
+"Please enter the state/province.","Por favor, introduzca el comuna.","module","Magento_Customer",,
 """%1"" is a required value.","""%1"" es un valor necesario.","module","Magento_Customer",,
 "Global","Global","module","Magento_Customer",,
 "Per Website","Por sitio web","module","Magento_Customer",,
@@ -3564,7 +3564,7 @@
 "Street Address %1","Dirección %1","module","Magento_Customer",,
 "VAT Number","Número de IVA","module","Magento_Customer",,
 "City","Ciudad","module","Magento_Customer",,
-"State/Province","Estado/Provincia","module","Magento_Customer",,
+"State/Province","Comuna","module","Magento_Customer",,
 "Please select a region, state or province.","Por favor seleccione región, estado o provincia.","module","Magento_Customer",,
 "Zip/Postal Code","Código Postal","module","Magento_Customer",,
 "Country","País","module","Magento_Customer",,
@@ -3929,7 +3929,7 @@
 "Street Address %1","Dirección %1","module","Magento_CustomerCustomAttributes",,
 "VAT Number","Número de IVA","module","Magento_CustomerCustomAttributes",,
 "City","Ciudad","module","Magento_CustomerCustomAttributes",,
-"State/Province","Estado/Provincia","module","Magento_CustomerCustomAttributes",,
+"State/Province","Comuna","module","Magento_CustomerCustomAttributes",,
 "Please select a region, state or province.","Por favor seleccione región, estado o provincia.","module","Magento_CustomerCustomAttributes",,
 "Zip/Postal Code","Código Postal","module","Magento_CustomerCustomAttributes",,
 "Country","País","module","Magento_CustomerCustomAttributes",,
@@ -4050,7 +4050,7 @@
 "Billing","Facturación","module","Magento_CustomerSegment",,
 "Shipping","Envío","module","Magento_CustomerSegment",,
 "Customer Address %1 Default %2 Address","Dirección de Cliente %1 Predeterminada %2 Dirección","module","Magento_CustomerSegment",,
-"Has State/Province","Tiene Estado/provincia","module","Magento_CustomerSegment",,
+"Has State/Province","Tiene Comuna","module","Magento_CustomerSegment",,
 "If Customer Address %1 State/Province specified","Si se especifica al cliente dirección %1 provincia","module","Magento_CustomerSegment",,
 "has","ha","module","Magento_CustomerSegment",,
 "does not have","no tiene","module","Magento_CustomerSegment",,
@@ -4132,7 +4132,7 @@
 "Phone","Teléfono","module","Magento_CustomerSegment",,
 "ZIP","C.P.","module","Magento_CustomerSegment",,
 "Country","País","module","Magento_CustomerSegment",,
-"State/Province","Estado/Provincia","module","Magento_CustomerSegment",,
+"State/Province","Comuna","module","Magento_CustomerSegment",,
 "Customer Since","Cliente desde","module","Magento_CustomerSegment",,
 "View Combined Report","Ver informe combinado","module","Magento_CustomerSegment",,
 "Set","Set","module","Magento_CustomerSegment",,
@@ -4285,7 +4285,7 @@
 "Show Method if Not Applicable","Mostrar el método de envío, incluso si no se aplica","module","Magento_Dhl",,
 "Sort Order","Orden de aparición","module","Magento_Dhl",,
 "Debug","Depurar","module","Magento_Dhl",,
-"State/Province","Estado/Provincia","module","Magento_Directory",,
+"State/Province","Comuna","module","Magento_Directory",,
 "--Please Select--","--Por favor, seleccione--","module","Magento_Directory",,
 "lbs","lbs","module","Magento_Directory",,
 "kgs","kgs","module","Magento_Directory",,
@@ -5175,7 +5175,7 @@
 "New Address","Nueva dirección","module","Magento_GiftRegistry",,
 "Edit Gift Registry","Editar Registro de regalo","module","Magento_GiftRegistry",,
 "Create Gift Registry","Crear registro de regalo","module","Magento_GiftRegistry",,
-"State/Province","Estado/Provincia","module","Magento_GiftRegistry",,
+"State/Province","Comuna","module","Magento_GiftRegistry",,
 "Please select a region, state or province","Por favor seleccione región, estado o provincia","module","Magento_GiftRegistry",,
 "Please Select","Por favor, seleccione","module","Magento_GiftRegistry",,
 "View Gift Registry %1","Ve registro de regalo %1","module","Magento_GiftRegistry",,
@@ -6217,7 +6217,7 @@
 "Contact Name","Nombre del Contacto","module","Magento_MultipleLocationInventory",,
 "Email","Correo electrónico","module","Magento_MultipleLocationInventory",,
 "Country","País","module","Magento_MultipleLocationInventory",,
-"State/Province","Estado/Provincia","module","Magento_MultipleLocationInventory",,
+"State/Province","Comuna","module","Magento_MultipleLocationInventory",,
 "City","Ciudad","module","Magento_MultipleLocationInventory",,
 "Street","Straße","module","Magento_MultipleLocationInventory",,
 "ZIP","C.P.","module","Magento_MultipleLocationInventory",,
@@ -8576,7 +8576,7 @@
 "Contact Name","Nombre del Contacto","module","Magento_Rma",,
 "Street Address","Dirección postal (Calle, Nº de Casa, Código Postal)","module","Magento_Rma",,
 "City","Ciudad","module","Magento_Rma",,
-"State/Province","Estado/Provincia","module","Magento_Rma",,
+"State/Province","Comuna","module","Magento_Rma",,
 "ZIP/Postal Code","Código Postal","module","Magento_Rma",,
 "Country","País","module","Magento_Rma",,
 "Enabled","Habilitado","module","Magento_Rma",,
@@ -8951,7 +8951,7 @@
 "Please enter the phone number.","Por favor, introduzca el número de teléfono.","module","Magento_Sales",,
 "Please enter the zip/postal code.","Por favor, introduzca el código postal.","module","Magento_Sales",,
 "Please enter the country.","Por favor, ingrese el país.","module","Magento_Sales",,
-"Please enter the state/province.","Por favor, introduzca el estado/provincia.","module","Magento_Sales",,
+"Please enter the state/province.","Por favor, introduzca el comuna.","module","Magento_Sales",,
 "Requested entity doesn't exist","Entidad solicitada no existe","module","Magento_Sales",,
 "Could not delete order address","No se puede eliminar la dirección del pedido","module","Magento_Sales",,
 "Could not save order address","No se puede guardar dirección de orden","module","Magento_Sales",,
@@ -9061,7 +9061,7 @@
 "Email","Correo electrónico","module","Magento_Sales",,
 "First Name","Nombre","module","Magento_Sales",,
 "Last Name","Apellidos","module","Magento_Sales",,
-"State/Province","Estado/Provincia","module","Magento_Sales",,
+"State/Province","Comuna","module","Magento_Sales",,
 "Street Address","Domicilio","module","Magento_Sales",,
 "Phone Number","Numero de teléfono","module","Magento_Sales",,
 "Zip/Postal Code","Código Postal","module","Magento_Sales",,
@@ -9574,7 +9574,7 @@
 "Shipping Method","Método de envío","module","Magento_SalesRule",,
 "Shipping Postcode","Código postal","module","Magento_SalesRule",,
 "Shipping Region","Región de envío","module","Magento_SalesRule",,
-"Shipping State/Province","Estado/Provincia para el despacho","module","Magento_SalesRule",,
+"Shipping State/Province","Comuna para el despacho","module","Magento_SalesRule",,
 "Shipping Country","País de envío","module","Magento_SalesRule",,
 "Product attribute combination","Combinación de atributos de artículo","module","Magento_SalesRule",,
 "Products subselection","Subselección de artículos","module","Magento_SalesRule",,
@@ -11233,7 +11233,7 @@
 "Please enter a valid date.","Por favor introduce una fecha correcta.","module","Magento_Ui",,
 "Please enter a valid URL Key (Ex: ""example-page"", ""example-page.html"" or ""anotherlevel/example-page"").","Introduzca una clave válida de URL (Ex: ""página de ejemplo"", ""ejemplo-page.html"" o ""anotherlevel/ejemplo-page"").","module","Magento_Ui",,
 "Please enter a valid zip code.","Por favor, introduzca un código postal (C.P.) válido.","module","Magento_Ui",,
-"Please select State/Province.","Por favor, seleccione estado/provincia.","module","Magento_Ui",,
+"Please select State/Province.","Por favor, seleccione comuna.","module","Magento_Ui",,
 "Please enter a value less than or equal to {0}.","Por favor, introduzca un valor inferior o igual a {0}.","module","Magento_Ui",,
 "Please enter a value greater than or equal to {0}.","Por favor, introduzca un valor superior o igual a {0}.","module","Magento_Ui",,
 "Please enter issue number or start date for switch/solo card type.","Please enter issue number or start date for switch/solo card type.","module","Magento_Ui",,
